<resources>
    <string name="app_name">Lamp</string>
    <string name="seek_red">Red</string>
    <string name="seek_green">Green</string>
    <string name="seek_blue">Blue</string>
    <string name="seek_white">White</string>
    <string name="seek_temp">Temperature</string>
    <string name="seek_brightness">Brightness</string>
    <string name="server_connecting">Connecting to the server…</string>
    <string name="server_fail">Could not connect to the server. Check that it is active and on the same network.</string>
    <string name="server_fail_title">Server unreachable</string>
    <string name="server_fail_button">OK</string>
    <string name="randomTitle">Auto Crossfade</string>
    <string name="randomDesc">Automatically fade between colours</string>
    <string name="notif_running">Random mode running</string>
    <string name="notif_subtext">Tap to open</string>
    <string name="notif_channel_name">Crossfade mode</string>
    <string name="notif_channel_desc">Shows notifications about the crossfade mode</string>
</resources>
